--- a/Inumaki.theme.css
+++ b/Inumaki.theme.css
@@ -6,4 +6,4 @@
  * @source https://github.com/jpmn333/Inumaki
  */
 
-  @import url('https://raw.githubusercontent.com/Lertttu/adasd/main/base.css');
+  @import url('https://github.com/Lertttu/adasd/blob/main/base.css');
